Search option added

--- a/smart/src/main/resources/templates/normal/show_contacts.html
+++ b/smart/src/main/resources/templates/normal/show_contacts.html
@@ -10,6 +10,15 @@
             <div class="card-body">
                 <h1 class="text-center">Your Contacts</h1>
 
+                <!-- search -->
+                <div class="search-container my-4 ">
+                  <input onkeyup="search()" id="search-input" type="text" class="form-control" placeholder="Search Your Contact">
+                  <div class="search-result">
+                   
+                    <!-- result goes here -->
+                  </div>
+                </div>
+
 
                 <table class="table">
                     <thead>
