--- a/smart/src/main/resources/templates/normal/profile.html
+++ b/smart/src/main/resources/templates/normal/profile.html
@@ -38,15 +38,17 @@
                       <td><span th:text="${user.enabled}"></span></td>                
                     </tr>
   
-                    <tr>
-                      <th scope="row">About You</th>
-                      <td><span th:text="${user.about}"></span></td>                
-                    </tr>
+                    
                    
                   </tbody>
   
                   
                 </table>
+
+                <div class="description text-center mt-4">
+                  <h4 class="mt-3"><u>USER DESCRIPTION</u></h4>
+                  <th:block th:utext="${user.about}"></th:block>
+               </div>
               </div>
             </div>
            
