--- a/smart/src/main/resources/templates/normal/add_contact_form.html
+++ b/smart/src/main/resources/templates/normal/add_contact_form.html
@@ -134,12 +134,12 @@
          </div>
          <!-- <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> -->
          <script src="https://cdn.tiny.cloud/1/gf18dtwefpiq6rxy1x3rb3rmef3osnyhkws04r4zpv6vxbv9/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-         <script>
+<!--          <script>
           tinymce.init({
             selector: '#mytextarea'
           });
         </script>
-
+ -->
          
 
 
